# Aegis

./: .clang-format  .clang-tidy  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.bat  demo.md  demo.ps1  demo.sh  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aegis-quant-ci.yml  ci.yml
aegis-quant/: README.md  docker-compose.yml  pyproject.toml
aegis-quant/.github/workflows/: ci.yml
aegis-quant/aegis_quant/: __init__.py
aegis-quant/aegis_quant/api/: app.py
aegis-quant/aegis_quant/attribution/: __init__.py  performance.py
aegis-quant/aegis_quant/backtest/: engine.py
aegis-quant/aegis_quant/cli/: main.py
aegis-quant/aegis_quant/core/: config.py  logging.py  types.py
aegis-quant/aegis_quant/data/: cleaning.py  connectors.py  engine.py  feature_store.py
aegis-quant/aegis_quant/factors/: __init__.py  research.py
aegis-quant/aegis_quant/features/: engine.py
aegis-quant/aegis_quant/ml/: pipeline.py  registry.py  trainer.py
aegis-quant/aegis_quant/paper/: engine.py
aegis-quant/aegis_quant/portfolio/: optimizer.py
aegis-quant/aegis_quant/risk/: metrics.py
aegis-quant/aegis_quant/strategy/: strategies.py
aegis-quant/aegis_quant/validation/: walk_forward.py
aegis-quant/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
aegis-quant/dashboard/src/: App.css  App.tsx  api.ts  index.css
aegis-quant/dashboard/src/pages/: Backtests.tsx  DataExplorer.tsx  Executions.tsx  Experiments.tsx  Factors.tsx  MLModels.tsx  MarketMaking.tsx  Options.tsx  Portfolio.tsx  Research.tsx  Risk.tsx  Settings.tsx
aegis-quant/data/sample/: BTC-USD.csv  BTC-USD.parquet  ETH-USD.csv
aegis-quant/docker/: Dockerfile  Dockerfile.platform  nginx.conf  prometheus.yml
aegis-quant/docs/: architecture.md  developer-guide.md  research-guide.md
aegis-quant/notebooks/: 01_momentum_research.ipynb
aegis-quant/scripts/: generate_sample_data.py  verify_endpoints.py
aegis-quant/sdk/python/aegis_quant_client/: __init__.py
aegis-quant/sdk/typescript/src/: index.ts
aegis-quant/tests/: test_api.py  test_core.py  test_factors.py  test_ml.py
analytics/: README.md  pyproject.toml
analytics/aegis_analytics/: __init__.py  attribution.py  exposure.py  risk.py  stress.py
analytics/tests/: test_analytics.py
benchmark/: CMakeLists.txt  latency_benchmark.cpp  order_throughput.cpp
core/: CMakeLists.txt
core/include/aegis/core/: clock.hpp  memory_pool.hpp  metrics.hpp  types.hpp
core/src/: clock.cpp  memory_pool.cpp  metrics.cpp  types.cpp
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  api.ts  index.css  simulation.ts
dashboard/src/components/: DepthChart.css  DepthChart.tsx  OrderBook.css  OrderBook.tsx  OrderEntry.css  OrderEntry.tsx  StatusBar.css  StatusBar.tsx  TradesPanel.css  TradesPanel.tsx
dashboard/src/hooks/: useExchangeData.ts
docker/: Dockerfile  Dockerfile.dashboard  docker-compose.yml  nginx.conf  prometheus.yml
docker/grafana/provisioning/dashboards/: aegis.json  dashboard.yml
docs/: architecture.md  benchmark-results.md  benchmarks.md  deployment.md  developer-guide.md  getting-started.md  performance-report.md  platform-architecture.md  user-guide.md
docs/api/: openapi.yaml
docs/screenshots/: README.md
exchange/: README.md
execution/: README.md  pyproject.toml
execution/aegis_execution/: __init__.py  algorithms.py  routing.py  simulator.py  slippage.py  tca.py
execution/tests/: test_execution.py
gateway/: CMakeLists.txt
gateway/include/aegis/gateway/: api_server.hpp
gateway/src/: api_server.cpp  websocket_hub.cpp
market-data/: CMakeLists.txt
market-data/include/aegis/market_data/: publisher.hpp
market-data/src/: publisher.cpp  recorder.cpp  replay.cpp
market-maker/: README.md  pyproject.toml
market-maker/aegis_market_maker/: __init__.py  engine.py  inventory.py  model.py  simulator.py
market-maker/tests/: test_market_maker.py
matching-engine/: CMakeLists.txt
matching-engine/include/aegis/matching/: matching_engine.hpp
matching-engine/src/: matching_engine.cpp
options/: README.md  pyproject.toml
options/aegis_options/: __init__.py  exotics.py  greeks.py  pricing.py  surface.py
options/tests/: test_options.py
orderbook/: CMakeLists.txt
orderbook/include/aegis/orderbook/: order_book.hpp
orderbook/src/: order_book.cpp
portal/: index.html  package-lock.json  package.json  vite.config.ts
portal/docker/: Dockerfile  nginx.conf
portal/src/: App.tsx  api.ts  index.css  vite-env.d.ts
portal/src/data/: simulated.ts
quant/: README.md
risk/: CMakeLists.txt
risk/include/aegis/risk/: risk_engine.hpp
risk/src/: risk_engine.cpp
scripts/: build.sh  install-platform.py  start.ps1  start.sh  test.sh
sdk/python/: setup.py
sdk/python/aegis/: __init__.py  client.py  types.py
sdk/python/examples/: submit_order.py
server/: CMakeLists.txt
server/src/: main.cpp
tests/: CMakeLists.txt
tests/integration/: test_exchange_flow.cpp
tests/unit/: test_market_data.cpp  test_matching_engine.cpp  test_order_book.cpp  test_risk_engine.cpp
