[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-quant"
version = "1.0.0"
description = "Institutional quantitative research platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aegis Quant" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=0.20",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "mlflow>=2.11",
    "optuna>=3.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "yfinance>=0.2",
    "websockets>=12.0",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "orjson>=3.9",
    "pyportfolioopt>=1.5",
    "empyrical-reloaded>=0.5",
    "ta>=0.11",
]

[project.optional-dependencies]
platform = [
    "aegis-execution",
    "aegis-options",
    "aegis-market-maker",
    "aegis-analytics",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
aegis-quant = "aegis_quant.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
