[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-analytics"
version = "1.0.0"
description = "Risk analytics, attribution, and stress testing"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_analytics*"]
