[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-market-maker"
version = "1.0.0"
description = "Market making engine with Avellaneda-Stoikov model"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_market_maker*"]
